# zed

./: Cargo.toml
crates/call/src/: call.rs
crates/collab/: Cargo.toml
crates/collab/src/: rpc.rs  tests.rs
crates/collab/src/tests/: terminal_tests.rs
crates/collab_ui/src/: collab_titlebar_item.rs
crates/diagnostics/src/: diagnostics.rs
crates/editor/src/: editor.rs  element.rs  items.rs
crates/gpui/: Cargo.toml
crates/gpui/src/: gpui.rs  keymap.rs  platform.rs  text_system.rs  window.rs
crates/gpui/src/platform/linux/: text_system.rs
crates/gpui/src/platform/linux/wayland/: window.rs
crates/gpui/src/platform/linux/x11/: window.rs
crates/gpui/src/platform/mac/: text_system.rs  window.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui/src/platform/windows/: display.rs  platform.rs  text_system.rs  util.rs  window.rs
crates/languages/src/: csharp.rs  css.rs  html.rs  json.rs  tailwind.rs  typescript.rs
crates/project/src/: project.rs  terminals.rs
crates/rpc/proto/: zed.proto
crates/rpc/src/: proto.rs
crates/search/src/: project_search.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: event_loop.rs  terminal.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_element.rs
crates/ui/src/components/: platform_titlebar.rs
crates/workspace/src/: item.rs  pane.rs  workspace.rs
crates/zed/: build.rs
crates/zed/src/: main.rs
extensions/slint/: Cargo.toml  extension.toml
