[package]
name = "terminal"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/terminal.rs"
doctest = false

[features]
test-support = []

[dependencies]
client = { path = "../client" }
gpui = { path = "../gpui" }
settings = { path = "../settings" }
db = { path = "../db" }
theme = { path = "../theme" }
util = { path = "../util" }

alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "33306142195b354ef3485ca2b1d8a85dfc6605ca" }
procinfo = { git = "https://github.com/zed-industries/wezterm", rev = "5cd757e5f2eb039ed0c6bb6512223e69d5efc64d", default-features = false }
itertools = "0.10"
dirs = "4.0.0"
shellexpand = "2.1.0"
libc = "0.2"
mio = "0.6.20"
mio-extras = "2"
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
ordered-float.workspace = true
anyhow.workspace = true
schemars.workspace = true
thiserror.workspace = true
log.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_derive.workspace = true

[dev-dependencies]
rand.workspace = true
